objects/Survey__c.object
<CustomObject>
    <description>Tracks when a contact survey is performed</description>
    <label>Survey</label>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Survey</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes whether contact has requested to opt out of future surveys</description>
        <label>Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Survey Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Surveyed_By__c</fullName>
        <label>Surveyed By</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Rating__c</fullName>
        <label>Overall Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Satisfied</fullName>
                </value>
                <value>
                    <fullName>Somewhat Satisfied</fullName>
                </value>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Very Dissatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Survey_Date__c</fullName>
        <defaultValue>today()+180</defaultValue>
        <description>Next estimated contact date for followup survey</description>
        <label>Next Survey Date</label>
        <type>Date</type>
    </fields>
</CustomObject>